add favicon and change list name theme

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Theme Generator</title>
+  <link rel="icon" href="https://legion.telkom.design/favicon.svg" type="image/svg+xml"/>
   <style>
     * {
       box-sizing: border-box;
@@ -28,22 +29,22 @@
       Select Theme
       <select name="theme" id="theme">
         <option>Select theme</option>
-        <option value="agr">AGR</option>
-        <option value="bbx">BBX</option>
-        <option value="bpm">BPM</option>
-        <option value="fab">FAB</option>
-        <option value="gtp">GTP</option>
-        <option value="int">INT</option>
-        <option value="lgt">LGT</option>
-        <option value="mcr">MCR</option>
-        <option value="mtn">MTN</option>
-        <option value="ods">ODS</option>
+        <option value="agr">Agree Culture</option>
+        <option value="bbx">BigBox</option>
+        <option value="bpm">BPOM</option>
+        <option value="fab">FAB Digital</option>
+        <option value="gtp">GovMart</option>
+        <option value="int">DigiTern</option>
+        <option value="lgt">Logee Trans</option>
+        <option value="mcr">MyCarrier</option>
+        <option value="mtn">MyTens</option>
+        <option value="ods">Odissey</option>
         <option value="oss">OSS</option>
-        <option value="pas">PAS</option>
-        <option value="pdm">PDM</option>
-        <option value="pjs">PJS</option>
-        <option value="pjs2">PJS2</option>
-        <option value="tci">TCI</option>
+        <option value="pas">DigitalPass</option>
+        <option value="pdm">Padi UMKM</option>
+        <option value="pjs">Pijar</option>
+        <option value="pjs2">Pijar 2</option>
+        <option value="tci">Telkom Indonesia</option>
         <option value="tkp">TKP</option>
       </select>
     </label>
